--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "main": "index.js",
   "author": "diegojimenes <contato.diegojimenes@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
     "jest": "^26.1.0"
   }
 }
