--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "author": "diegojimenes <contato.diegojimenes@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "babel-node": "babel-node --presets=latest",
+    "start": "nodemon --exec npm run babel-node -- ./index.js",
+    "build": "babel src -d dist"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^26.1.0",
-    "jest": "^26.1.0"
-  }
+    "babel-preset-latest": "^6.24.1",
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4"
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ]
+  },
+  "dependencies": {}
 }
