--- a/.github/workflows/simple_test.yml
+++ b/.github/workflows/simple_test.yml
@@ -16,4 +16,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm test
+      - run: yarn
+      - run: yarn test
