--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@types/jest": "^26.0.15",
     "babel-cli": "^6.26.0",
-    "babel-jest": "^26.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-jest": "^26.6.2",
     "babel-preset-latest": "^6.24.1",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4"
   },
-  "babel": { "presets": ["@babel/preset-env"] },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "dependencies": {
     "moment": "^2.29.1",
     "node-fetch": "^2.6.0"
